--- a/expense_tracker/style.css
+++ b/expense_tracker/style.css
@@ -59,6 +59,7 @@
   }
   input[type="number"],
   .expensecat,
+  input[type="date"],
   input[type="text"]{
     background-color: var(--grayColor);
     border:2px solid var(--blueColor);
@@ -68,10 +69,18 @@
     font-size: 14px;
     height: 40px;
   }
+  input[type="number"]{
+    width: 150px;
+  }
   input[type="number"]:focus,
   .expensecat:focus,
+  input[type="date"]:focus,
   input[type="text"]:focus{
     outline:none;
+  }
+
+  input::placeholder{
+    color: black;
   }
   button,a,
   input[type="submit"]{
@@ -155,79 +164,10 @@
   td:last-child {
     text-align: right;
   }
-
-  /* modal  */
-  /* If you like this, be sure to ❤️ it. */
-.wrapper {
-  height: 100vh;
-  /* This part is important for centering the content */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* End center */
-  background: -webkit-linear-gradient(to right, #834d9b, #d04ed6);
-  background: linear-gradient(to right, #834d9b, #d04ed6);
-}
-
-.wrapper a {
-  display: inline-block;
-  text-decoration: none;
-  padding: 15px;
-  background-color: #fff;
-  border-radius: 3px;
-  text-transform: uppercase;
-  color: #585858;
-  font-family: 'Roboto', sans-serif;
-}
-
-.modal {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(77, 77, 77, .7);
-  transition: all .4s;
-}
-
-.modal:target {
-  visibility: visible;
-  opacity: 1;
-}
-
-.modal__content {
-  border-radius: 4px;
-  position: relative;
-  width: 500px;
-  max-width: 90%;
-  background: #fff;
-  padding: 1em 2em;
-}
-
-.modal__footer {
-  text-align: right;
-  a {
-    color: #585858;
+  tr{
+    height: 50px;
   }
-  i {
-    color: #d02d2c;
+  .total{
+      text-align: right;
+      margin-top: 20px;
   }
-}
-.modal__close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: #585858;
-  text-decoration: none;
-}
-
-.modal__content #expense_tracker_form{
-  flex-direction: column;
-  gap: 10px;
-  margin: 30px;
-}
