--- a/frost-bento-agency-webpage/style.css
+++ b/frost-bento-agency-webpage/style.css
@@ -72,7 +72,7 @@
   }
   100%{transform: rotate(360deg);}
 }
-.middle{
+.middle , .bottom{
   width: 100%;
   display: flex;
 
@@ -113,6 +113,45 @@
   margin-right: 130px;
   margin-top: 60px;
 }
+.left-design{
+   background-image: url(images/bottom-bg-b.webp);
+   height: 170px;
+   width: 300px;
+   margin-left: 75px;
+   border-radius: 20px;
+   padding-left: 13px;
+   padding-top: 20px;
+}
+.de{
+   color: white;
+   font-family: "Archivo Black", serif;
+   font-size: 40px;
+}
+.de span{
+  font: 800 40px Arial;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1px;
+}
+.meta-bottom{
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 165px;
+  padding: 15px;
+  margin-top: 12px;
+  border-radius: 30px;
+}
+.meta-bottom a{
+  color: white;
+  text-decoration: none;
+  
+}
+
+
+
+
+
 
 
 
