--- a/expense_tracker/style.css
+++ b/expense_tracker/style.css
@@ -177,3 +177,56 @@
     text-align: center;
     margin: 40px 0px;
   }
+
+  /* modal  */
+  
+         .modal-container {
+          display: none; 
+          position: fixed; 
+          z-index: 1000; 
+          left: 0;
+          top: 0;
+          width: 100%; 
+          height: 100%;
+          background: rgba(0, 0, 0, 0.3);
+          justify-content: center;
+          align-items: center;
+      }
+
+      .modal-box {
+          background: white;
+          padding: 15px;
+          width: 300px; 
+          border-radius: 8px;
+          text-align: center;
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      }
+
+      .btn-close {
+          background: red;
+          color: white;
+          border: none;
+          padding: 7px 12px;
+          cursor: pointer;
+          border-radius: 5px;
+          margin-top: 10px;
+      }
+
+      .input-field, .dropdown-field {
+          width: 100%;
+          margin: 6px 0;
+          padding: 7px;
+          border: 1px solid #ccc;
+          border-radius: 5px;
+      }
+
+      .btn-submit {
+          background: #007bff;
+          color: white;
+          border: none;
+          padding: 8px 12px;
+          width: 100%;
+          cursor: pointer;
+          border-radius: 5px;
+          margin-top: 5px;
+      }
